Fix layout bug by changing the className

--- a/src/assets/styles/cmps/StayHeader.css
+++ b/src/assets/styles/cmps/StayHeader.css
@@ -1,5 +1,5 @@
 /* mobile */
-.stay-header.big-layout.mid-layout.mobile {
+.stay-details-header.big-layout.mid-layout.mobile {
     display: flex;
     align-content: center;
     position: fixed;
@@ -50,7 +50,7 @@
     }
 }
 
-.stay-header {
+.stay-details-header{
     z-index: 5;
     display: flex;
     align-content: center;
